<resources>
    <string name="app_name">SampleCinemaApp</string>
    <string name="cinema_type_action">Action</string>
    <string name="cinema_type_drama">Drama</string>
    <string name="cinema_type_politics">Politics</string>
    <string name="cinema_type_horror">Horror</string>
    <string name="cinema_type_biography">Biography</string>

    <string name="edittext_name_hint">Name</string>
    <string name="edittext_year_hint">Year</string>
    <string name="edittext_director_hint">Director</string>
    <string name="edittext_company_hint">Company</string>
    <string name="button_save_text">Save</string>
    <string name="button_add_text">Add</string>
    <string name="button_update_text">Update</string>
    <string name="button_delete_text">Delete</string>
    <string name="button_list_text">List</string>
    <string name="button_exit_text">Exit</string>
    <string name="switch_modify_text">Modify</string>


    <string name="message_text_goodbye_csd">C and System Programmers Association</string>
    <string name="message_title_no_cinema">Warning</string>
    <string name="message_text_no_cinema">No cinema added yet</string>
    <string name="message_title_cinema_details">Information</string>
    <string name="message_text_cinema_details">Do you want to update?</string>
    <string name="message_text_cinema_details_yes_button">Yes</string>
    <string name="message_text_cinema_details_no_button">No</string>
    <string name="message_text_no_cinema_ok_button">OK</string>
</resources>