<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CinemaDetailsActivity">

    <TextView
        android:id="@+id/cinemaDetailsActivityTextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cinemaDetailsActivityEditTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_name_hint"
        />

    <Spinner
        android:id="@+id/cinemaDetailsActivitySpinnerType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"/>

    <EditText
        android:id="@+id/cinemaDetailsActivityEditTextYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_year_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/cinemaDetailsActivityEditTextDirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edittext_director_hint"/>

    <EditText
        android:id="@+id/cinemaDetailsActivityEditTextCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_company_hint"
        />

    <Button
        android:id="@+id/cinemaDetailsActivityButtonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_update_text" />


</LinearLayout>